--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,14 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <% if user_signed_in?%>
+      <%= current_user.id%>
+      <%= link_to 'Log Out', destroy_user_session_path, data: {"turbo-method": :delete} %>
+      <%= link_to 'Account setting', edit_user_registration_path%>
+    <% else %>
+      <%= link_to 'Log In', new_user_session_path%><br>
+      <%= link_to 'Sign Up', new_user_registration_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
